--- a/TemplateSpartaneApp/TemplateSpartaneApp/Views/Evaluacion/EvaluacionPageUno.xaml
+++ b/TemplateSpartaneApp/TemplateSpartaneApp/Views/Evaluacion/EvaluacionPageUno.xaml
@@ -170,7 +170,7 @@
                     </StackLayout>
 
                     <StackLayout VerticalOptions="EndAndExpand">
-                        <StackLayout BackgroundColor="Gray">
+                        <StackLayout BackgroundColor="#ECECEC">
                             <StackLayout Margin="20,20">
                                 <Label Text="Resultado IMC = 18.5"
                                        TextColor="Black"
@@ -265,7 +265,7 @@
                             <controls:EntryControl HeightRequest="40" BorderColor="Gray" HorizontalTextAlignment="Center" Text="{Binding MasaCorporal}" Keyboard="Numeric" HorizontalOptions="Fill" CornerRadius="50"/>
 
                         </StackLayout>
-                        <StackLayout VerticalOptions="EndAndExpand" BackgroundColor="Gray">
+                        <StackLayout VerticalOptions="EndAndExpand" BackgroundColor="#ECECEC">
                             <BoxView BackgroundColor="#1F9017" HeightRequest="0.5" Margin="0,0,0,10"/>
                             <StackLayout Margin="20,10">
                                 <Label Text="Resultado IMC = 18.5"
@@ -353,7 +353,7 @@
 
                         </StackLayout>
                         <StackLayout VerticalOptions="EndAndExpand" Margin="0,20">
-                            <StackLayout BackgroundColor="Gray">
+                            <StackLayout BackgroundColor="#ECECEC">
                                 <StackLayout Margin="20,20">
                                     <Label Text="Resultado IMC = 18.5"
                                            TextColor="Black"
