--- a/TemplateSpartaneApp/TemplateSpartaneApp/Views/ProductosNutricionales/ProductosNutricionalesPage.xaml
+++ b/TemplateSpartaneApp/TemplateSpartaneApp/Views/ProductosNutricionales/ProductosNutricionalesPage.xaml
@@ -42,7 +42,7 @@
                            CornerRadius="5"
                            HeightRequest="80">
                         <Frame.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding}"
+                            <TapGestureRecognizer Command="{Binding ProductosEnteralesCommand}"
                                                   NumberOfTapsRequired="1"/>
                         </Frame.GestureRecognizers>
                         <Label Text="Enteral - Suplementos"
@@ -55,7 +55,7 @@
                            CornerRadius="5"
                            HeightRequest="80">
                         <Frame.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding}"
+                            <TapGestureRecognizer Command="{Binding ProductosParenteralesCommand}"
                                                   NumberOfTapsRequired="1"/>
                         </Frame.GestureRecognizers>
                         <Label Text="Parenteral"
