- terminando cambios vistas

--- a/TemplateSpartaneApp/TemplateSpartaneApp/Views/Evaluacion/EvaluacionPageUno.xaml
+++ b/TemplateSpartaneApp/TemplateSpartaneApp/Views/Evaluacion/EvaluacionPageUno.xaml
@@ -9,7 +9,7 @@
                 <StackLayout Orientation="Horizontal">
                     <Image Source="left_arrow.png" HorizontalOptions="Start" IsVisible="{Binding ButtonBack}">
                         <Image.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding ButtonBackCommand}"/>
+                            <TapGestureRecognizer Command="{Binding ReturnToPreviousPageCommand}"/>
                         </Image.GestureRecognizers>
                     </Image>
                     <Label Text="Evaluacion"
