--- a/TemplateSpartaneApp/TemplateSpartaneApp/Views/Session/InicioUnoPage.xaml
+++ b/TemplateSpartaneApp/TemplateSpartaneApp/Views/Session/InicioUnoPage.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TemplateSpartaneApp.Views.Session.InicioUnoPage">
     <ContentPage.Content>
-        <StackLayout Margin="26">
-            <StackLayout HorizontalOptions="Fill">
+        <StackLayout Margin="20,10">
+            <StackLayout Spacing="20" HorizontalOptions="Fill">
 
                 <StackLayout HorizontalOptions="EndAndExpand" Orientation="Horizontal" VerticalOptions="Center">
                     <Label Text="Saltar" FontSize="Large" TextColor="Black" VerticalTextAlignment="Center">
@@ -18,14 +18,14 @@
                 <Image Source="logo.png" />
                 <Label Text="Bienvenido a la app&#x0a;Nutrición Clínica Total" FontSize="38" TextColor="Black" HorizontalTextAlignment="Center"/>
 
-                <StackLayout HorizontalOptions="Center" Margin="10,10,10,20">
+                <StackLayout HorizontalOptions="Center" Margin="10">
                     <Image Source="image_center_uno.png" WidthRequest="250"/>
                 </StackLayout>
 
                 <Label Text="Aqui pondremos una breve&#x0a;explicacion de la bienvenida" TextColor="Black" FontSize="Title" HorizontalTextAlignment="Center"/>
 
                 <StackLayout
-                    Margin="0,30"
+                    Margin="0,10"
                     HorizontalOptions="Center"
                     Orientation=" Horizontal">
                     <Frame BackgroundColor="#327820" CornerRadius="50" WidthRequest="5" HeightRequest="5" Padding="5" Margin="7,0">
