--- a/TemplateSpartaneApp/TemplateSpartaneApp/Views/ProductosNutricionales/Enteral/ProductoEnteralPage.xaml
+++ b/TemplateSpartaneApp/TemplateSpartaneApp/Views/ProductosNutricionales/Enteral/ProductoEnteralPage.xaml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TemplateSpartaneApp.Views.ProductosNutricionales.ProductoEnteralPage">
+             x:Class="TemplateSpartaneApp.Views.ProductosNutricionales.Enteral.ProductoEnteralPage">
     <ContentPage.Content>
         <StackLayout>
             <StackLayout Margin="20,20,20,0">
-                <Image Source="left_arrow.png" 
+                <Image Source="left_arrow.png"
                        IsVisible="{Binding ButtonBack}"
                        HorizontalOptions="Start">
                     <Image.GestureRecognizers>
@@ -50,7 +50,7 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Frame Grid.Row="0" 
+                    <Frame Grid.Row="0"
                            Grid.Column="0"
                            Padding="5"
                            BackgroundColor="#E6E9F0">
@@ -68,7 +68,7 @@
                         </StackLayout>
                     </Frame>
 
-                    <Frame Grid.Row="0" 
+                    <Frame Grid.Row="0"
                            Grid.Column="1"
                            Padding="5"
                            BackgroundColor="#E6E9F0">
@@ -86,7 +86,7 @@
                         </StackLayout>
                     </Frame>
 
-                    <Frame Grid.Row="0" 
+                    <Frame Grid.Row="0"
                            Grid.Column="2"
                            Padding="5"
                            BackgroundColor="#E6E9F0">
@@ -104,7 +104,7 @@
                         </StackLayout>
                     </Frame>
 
-                    <Frame Grid.Row="0" 
+                    <Frame Grid.Row="0"
                            Grid.Column="3"
                            Padding="5"
                            BackgroundColor="#E6E9F0">
@@ -141,9 +141,9 @@
                     <Image Source="enlace.png"
                            WidthRequest="15"/>
                     <Label Text="ver producto en su pagina oficial"
-                       TextColor="Blue"
-                       HorizontalTextAlignment="Start"
-                       FontSize="Large"/>
+                           TextColor="Blue"
+                           HorizontalTextAlignment="Start"
+                           FontSize="Large"/>
                 </StackLayout>
 
                 <Button Command="{Binding ButtonBackCommand}"
