--- a/TemplateSpartaneApp/TemplateSpartaneApp/Views/ProductosNutricionales/Parenteral/ProductosParenteralesPage.xaml
+++ b/TemplateSpartaneApp/TemplateSpartaneApp/Views/ProductosNutricionales/Parenteral/ProductosParenteralesPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TemplateSpartaneApp.Views.ProductosNutricionales.ProductosParenteralesPage"
+             x:Class="TemplateSpartaneApp.Views.ProductosNutricionales.Parenteral.ProductosParenteralesPage"
              xmlns:controls="clr-namespace:TemplateSpartaneApp.Controls"
              x:Name="ProductosParenterales">
     <ContentPage.Content>
@@ -9,10 +9,10 @@
             <StackLayout Orientation="Horizontal">
                 <Image Source="left_arrow.png" IsVisible="{Binding IsVisibleBackButton}">
                     <Image.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding ButtonBackCommand}"/>
+                        <TapGestureRecognizer Command="{Binding ReturnToPreviousPageCommand}"/>
                     </Image.GestureRecognizers>
                 </Image>
-                <Label Text="Calculo nutricional"
+                <Label Text="Productos Parenterales"
                        TextColor="Black"
                        FontSize="Large"
                        VerticalTextAlignment="Center"/>
