--- a/TemplateSpartaneApp/TemplateSpartaneApp/Views/ProductosNutricionales/Oral/ProductosOralesPage.xaml
+++ b/TemplateSpartaneApp/TemplateSpartaneApp/Views/ProductosNutricionales/Oral/ProductosOralesPage.xaml
@@ -21,16 +21,13 @@
             <StackLayout Orientation="Horizontal">
                 <Image Source="search.png"
                        WidthRequest="30"/>
-                <controls:EntryControl HeightRequest="40" BorderColor="Transparent" BorderWidth="0" BackgroundColor="#C2C2C2" Placeholder="Search" HorizontalTextAlignment="Start" Text="{Binding Password}" Keyboard="Numeric" HorizontalOptions="FillAndExpand" CornerRadius="4"/>
-                <Frame BackgroundColor="#C2C2C2"
-                       CornerRadius="4">
-
-                </Frame>
+                <controls:EntryControl HeightRequest="40" BorderColor="Transparent" BorderWidth="0" BackgroundColor="#EEEEEE" Placeholder="Search" HorizontalTextAlignment="Start" Text="{Binding Password}" Keyboard="Numeric" HorizontalOptions="FillAndExpand" CornerRadius="20"/>
+                <Image Source="filter_round.png"/>
             </StackLayout>
 
             <CarouselView ItemsSource="{Binding ItemsProductosOrales}"
                           Margin="0,15"
-                          PeekAreaInsets="120">
+                          PeekAreaInsets="80">
                 <CarouselView.ItemsLayout>
                     <LinearItemsLayout Orientation="Horizontal"/>
                 </CarouselView.ItemsLayout>
@@ -45,101 +42,38 @@
                                     <TapGestureRecognizer Command="{Binding BindingContext.SelectProduct, Source={x:Reference ProductosOrales}}"
                                                           CommandParameter="{Binding .}"/>
                                 </Frame.GestureRecognizers>
-                                <Image Source="{Binding ImageProduct}" WidthRequest="50"/>
+                                <Image Source="logo.png" WidthRequest="50"/>
                             </Frame>
                             <StackLayout>
-                                <Label Text="{Binding NombreProducto}"
-                                       TextColor="Blue"
-                                       FontAttributes="Bold"
-                                       FontSize="Large"
-                                       HorizontalOptions="Center"
-                                       VerticalTextAlignment="Center"/>
-                                <BoxView BackgroundColor="#DADADA" HeightRequest="0.5"/>
-                                <Label Text="237"
-                                       TextColor="Blue"
-                                       FontSize="Large"
-                                       HorizontalOptions="Center"
-                                       VerticalTextAlignment="Center"/>
-                                <BoxView BackgroundColor="#DADADA" HeightRequest="0.5"/>
-                                <Label Text="237"
-                                       TextColor="Blue"
-                                       FontSize="Large"
-                                       HorizontalOptions="Center"
-                                       VerticalTextAlignment="Center"/>
-                                <BoxView BackgroundColor="#DADADA" HeightRequest="0.5"/>
-                                <Label Text="237"
-                                       TextColor="Blue"
-                                       FontSize="Large"
-                                       HorizontalOptions="Center"
-                                       VerticalTextAlignment="Center"/>
-                                <BoxView BackgroundColor="#DADADA" HeightRequest="0.5"/>
-                                <Label Text="237"
-                                       TextColor="Blue"
-                                       FontSize="Large"
-                                       HorizontalOptions="Center"
-                                       VerticalTextAlignment="Center"/>
-                                <BoxView BackgroundColor="#DADADA" HeightRequest="0.5"/>
-                                <Label Text="237"
-                                       TextColor="Blue"
-                                       FontSize="Large"
-                                       HorizontalOptions="Center"
-                                       VerticalTextAlignment="Center"/>
-                                <BoxView BackgroundColor="#DADADA" HeightRequest="0.5"/>
-                            </StackLayout>
-
-                            <StackLayout Margin="0,30">
-                                <Label Text="{Binding NombreProducto}"
-                                       TextColor="Blue"
-                                       FontAttributes="Bold"
-                                       FontSize="Large"
-                                       HorizontalOptions="Center"
-                                       VerticalTextAlignment="Center"/>
-                                <BoxView BackgroundColor="#DADADA" HeightRequest="0.5"/>
-                                <Label Text="237"
-                                       TextColor="Blue"
-                                       FontSize="Large"
-                                       HorizontalOptions="Center"
-                                       VerticalTextAlignment="Center"/>
-                                <BoxView BackgroundColor="#DADADA" HeightRequest="0.5"/>
-                                <Label Text="237"
-                                       TextColor="Blue"
-                                       FontSize="Large"
-                                       HorizontalOptions="Center"
-                                       VerticalTextAlignment="Center"/>
-                                <BoxView BackgroundColor="#DADADA" HeightRequest="0.5"/>
-                                <Label Text="237"
-                                       TextColor="Blue"
-                                       FontSize="Large"
-                                       HorizontalOptions="Center"
-                                       VerticalTextAlignment="Center"/>
-                                <BoxView BackgroundColor="#DADADA" HeightRequest="0.5"/>
-                                <Label Text="237"
-                                       TextColor="Blue"
-                                       FontSize="Large"
-                                       HorizontalOptions="Center"
-                                       VerticalTextAlignment="Center"/>
-                                <BoxView BackgroundColor="#DADADA" HeightRequest="0.5"/>
-                                <Label Text="237"
-                                       TextColor="Blue"
-                                       FontSize="Large"
-                                       HorizontalOptions="Center"
-                                       VerticalTextAlignment="Center"/>
-                                <BoxView BackgroundColor="#DADADA" HeightRequest="0.5"/>
-
-                                <Frame Padding="5"
-                                       BackgroundColor="#10BA52"
-                                       VerticalOptions="Center"
-                                       WidthRequest="40"
-                                       HorizontalOptions="Center"
-                                       CornerRadius="20">
-                                    <Frame.GestureRecognizers>
-                                        <TapGestureRecognizer Command="{Binding BindingContext.SelectProduct, Source={x:Reference ProductosOrales}}"
-                                                              CommandParameter="{Binding .}"/>
-                                    </Frame.GestureRecognizers>
-                                    <Label Text="Ver"
-                                           TextColor="White"
-                                           HorizontalTextAlignment="Center"/>
-                                </Frame>
+                                <ListView HasUnevenRows="True" SeparatorVisibility="Default" SeparatorColor="DeepSkyBlue" BackgroundColor="Transparent" ItemsSource="{Binding ItemsProductosOrales}">
+                                    <ListView.ItemTemplate>
+                                        <DataTemplate>
+                                            <ViewCell>
+                                                <Frame HasShadow="True" BackgroundColor="white">
+                                                    <StackLayout Orientation="Horizontal">
+                                                        <StackLayout HorizontalOptions="Start">
+                                                            <Label Text="{Binding Productos_Nutricionales_Nombre}" TextColor="Black" FontSize="16"/>
+                                                        </StackLayout>
+                                                        <StackLayout HorizontalOptions="EndAndExpand">
+                                                            <Label>
+                                                                <Label.FormattedText>
+                                                                    <FormattedString>
+                                                                        <Span Text="{Binding Medidas_Oral_Medida}"
+                                                                              TextColor="blue"/>
+                                                                        <Span Text=" "/>
+                                                                        <Span Text="{Binding Medidas_Oral_Detalle}"
+                                                                              TextColor="blue"
+                                                                              FontSize="16"/>
+                                                                    </FormattedString>
+                                                                </Label.FormattedText>
+                                                            </Label>
+                                                        </StackLayout>
+                                                    </StackLayout>
+                                                </Frame>
+                                            </ViewCell>
+                                        </DataTemplate>
+                                    </ListView.ItemTemplate>
+                                </ListView>
                             </StackLayout>
                         </StackLayout>
                     </DataTemplate>
